--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Viralbiryani | Digital Marketing Agency</title>
-  <meta name="description" content="Viralbiryani is a modern digital marketing studio specializing in growth strategy, performance ads, SEO, and social content." />
+  <meta name="description" content="Viralbiryani helps small & medium businesses grow with smart, practical, and budget-friendly digital marketing—online and offline." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <style>
@@ -20,7 +20,7 @@
       --radius: 14px;
     }
     * { box-sizing: border-box; }
-    html, body { margin: 0; padding: 0; background: var(--bg); color: var(--text); font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
+    html, body { margin: 0; padding: 0; background: var(--bg); color: var(--text); font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; scroll-behavior: smooth; }
     a { color: inherit; text-decoration: none; }
     .container { width: min(1200px, 92%); margin: 0 auto; }
     header {
@@ -44,6 +44,8 @@
     .btn.primary {
       border: none; background: linear-gradient(135deg, var(--accent), var(--accent-2)); color: #0a0e12; font-weight: 700;
     }
+
+    /* Hero */
     .hero {
       position: relative; padding: 80px 0 40px; display: grid; gap: 26px; align-items: center;
     }
@@ -55,16 +57,24 @@
     .hero-card {
       background: radial-gradient(100% 100% at 0% 0%, #121923 0%, #0e1217 70%); border: 1px solid var(--border); border-radius: var(--radius); padding: 14px;
       display: grid; grid-template-columns: 1fr 1fr; gap: 14px;
+      overflow: hidden;
     }
-    .hero-card img { width: 100%; height: 180px; object-fit: cover; border-radius: 10px; }
-    .pill { display: inline-flex; gap: 8px; align-items: center; padding: 6px 10px; border: 1px solid var(--border); border-radius: 999px; color: var(--muted); font-size: 12px; }
+    .hero-card img { width: 100%; height: 180px; object-fit: cover; border-radius: 10px; transform: scale(1); transition: transform .6s ease; }
+    .hero-card img:hover { transform: scale(1.06); }
+
+    /* Sections */
     section { padding: 50px 0; }
     .section-head { display: flex; align-items: end; justify-content: space-between; margin-bottom: 20px; }
     .grid-3 { display: grid; grid-template-columns: repeat(3, 1fr); gap: 18px; }
     .card {
       background: linear-gradient(180deg, #12161b, #0e1217); border: 1px solid var(--border);
-      border-radius: var(--radius); padding: 16px; box-shadow: var(--shadow);
+      border-radius: var(--radius); padding: 16px; box-shadow: var(--shadow); overflow: hidden;
     }
+    .card-hero {
+      height: 140px; border-radius: 10px; overflow: hidden; margin-bottom: 10px; position: relative;
+    }
+    .card-hero img { width: 100%; height: 100%; object-fit: cover; transform: scale(1); transition: transform .7s ease; }
+    .card:hover .card-hero img { transform: scale(1.08); }
     .card h3 { margin: 8px 0 6px; }
     .card p { color: var(--muted); margin: 0; }
     .service-icon {
@@ -75,83 +85,128 @@
     .metrics { display: grid; grid-template-columns: repeat(4, 1fr); gap: 14px; }
     .metric { background: #0f1419; border: 1px solid var(--border); border-radius: 12px; padding: 14px; text-align: center; }
     .metric b { font-size: 24px; }
+
+    /* Showcase */
     .showcase { display: grid; grid-template-columns: repeat(3, 1fr); gap: 14px; }
     .shot { position: relative; border-radius: 14px; overflow: hidden; border: 1px solid var(--border); }
-    .shot img { width: 100%; height: 220px; object-fit: cover; display: block; }
+    .shot img { width: 100%; height: 220px; object-fit: cover; display: block; transform: scale(1); transition: transform .8s ease; }
+    .shot:hover img { transform: scale(1.06); }
     .shot .label { position: absolute; bottom: 10px; left: 10px; background: rgba(0,0,0,0.5); color: #fff; padding: 6px 10px; border-radius: 999px; font-size: 12px; backdrop-filter: blur(6px); }
-    .list { display: grid; gap: 8px; margin: 12px 0 0; }
-    .list li { list-style: none; color: var(--muted); }
-    .list li::before { content: "✓"; color: var(--accent); margin-right: 8px; }
+
+    /* CTA */
     .cta {
       background: linear-gradient(135deg, rgba(110,243,165,0.08), rgba(122,162,255,0.12));
-      border: 1px solid var(--border); border-radius: 18px; padding: 24px; display: grid; grid-template-columns: 1.3fr 0.7fr; gap: 18px; align-items: center;
+      border: 1px solid var(--border); border-radius: 18px; padding: 24px; display: grid; grid-template-columns: 1.3fr 0.7fr; gap: 18px; align-items: center; overflow: hidden;
     }
+    .cta-visual { border-radius: 14px; overflow: hidden; height: 100%; min-height: 220px; }
+    .cta-visual img { width: 100%; height: 100%; object-fit: cover; transform: scale(1.02); transition: transform 1.2s ease; }
+    .cta:hover .cta-visual img { transform: scale(1.07); }
+
+    /* About */
+    .about {
+      display: grid; grid-template-columns: 0.9fr 1.1fr; gap: 22px; align-items: center;
+      background: linear-gradient(180deg, #12161b, #0f1419); border: 1px solid var(--border); border-radius: 16px; padding: 20px;
+    }
+    .about-media { border-radius: 14px; overflow: hidden; height: 100%; min-height: 260px; }
+    .about-media img { width: 100%; height: 100%; object-fit: cover; }
+    .about .sub { max-width: 100%; }
+
+    /* Form */
     form { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
     input, textarea, select {
       width: 100%; padding: 12px 14px; border-radius: 12px; background: #0f1419; border: 1px solid var(--border); color: var(--text);
       outline: none;
     }
     textarea { grid-column: 1 / -1; min-height: 110px; resize: vertical; }
+
     footer {
       margin-top: 40px; border-top: 1px solid var(--border); padding: 24px 0; color: var(--muted);
     }
+
     @media (max-width: 980px) {
-      .hero-grid, .cta, .grid-3, .metrics, .showcase, form { grid-template-columns: 1fr; }
+      .hero-grid, .cta, .grid-3, .metrics, .showcase, form, .about { grid-template-columns: 1fr; }
       .hero-card { grid-template-columns: 1fr; }
       .shot img { height: 180px; }
+    }
+
+    /* Reveal animations */
+    .reveal { opacity: 0; transform: translateY(18px) scale(0.98); transition: opacity .7s ease, transform .7s ease; }
+    .reveal.in { opacity: 1; transform: translateY(0) scale(1); }
+    .reveal-stagger > * { opacity: 0; transform: translateY(16px); transition: opacity .6s ease, transform .6s ease; }
+    .reveal-stagger.in > * { opacity: 1; transform: none; }
+    .reveal-stagger.in > *:nth-child(1){ transition-delay: .05s; }
+    .reveal-stagger.in > *:nth-child(2){ transition-delay: .12s; }
+    .reveal-stagger.in > *:nth-child(3){ transition-delay: .18s; }
+    .reveal-stagger.in > *:nth-child(4){ transition-delay: .24s; }
+    .pulse {
+      animation: pulse 2.2s ease-in-out infinite;
+      box-shadow: 0 0 0 0 rgba(110,243,165,0.4);
+    }
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(110,243,165,0.35); }
+      70% { box-shadow: 0 0 0 16px rgba(110,243,165,0); }
+      100% { box-shadow: 0 0 0 0 rgba(110,243,165,0); }
     }
   </style>
 </head>
 <body>
   <header>
     <div class="container nav">
-      <div class="brand">
+      <div class="brand reveal">
         <div class="brand-badge">VB</div>
         <div>Viralbiryani</div>
       </div>
-      <nav class="nav-links">
+      <nav class="nav-links reveal reveal-stagger">
         <a href="#services" class="pill">Services</a>
         <a href="#work" class="pill">Work</a>
+        <a href="#about" class="pill">About</a>
         <a href="#contact" class="pill">Contact</a>
-        <a href="#contact" class="btn primary">Get Proposal</a>
+        <a href="#contact" class="btn primary pulse">Get Proposal</a>
       </nav>
     </div>
   </header>
 
   <main class="container">
+    <!-- HERO -->
     <section class="hero">
       <div class="hero-grid">
-        <div>
+        <div class="reveal">
           <div class="kicker">Growth-first marketing studio</div>
           <h1>Turn attention into compounding growth.</h1>
-          <p class="sub">Viralbiryani blends performance marketing, SEO, and scroll-stopping content to drive measurable revenue across the funnel.</p>
+          <p class="sub">I help small & medium businesses grow through smart, practical, and budget-friendly digital marketing—both online and offline.</p>
           <div class="hero-cta">
             <a href="#contact" class="btn primary">Book a Strategy Call</a>
             <a href="#work" class="btn">See Case Studies</a>
           </div>
           <ul class="list">
-            <li>Paid Social & Search • Creative testing • UGC & influencer</li>
-            <li>Technical & programmatic SEO • Content ops • Analytics</li>
-            <li>Landing pages & CRO • Brand systems • CRM lifecycle</li>
+            <li>SEO & Website Optimization</li>
+            <li>Marketing Strategy for cafes, service providers, local shops & e‑commerce</li>
+            <li>Local Marketing & Social Media Growth</li>
+            <li>Content Planning & Consultation</li>
           </ul>
         </div>
-        <div class="hero-card">
+        <div class="hero-card reveal">
           <img alt="Team collaborating on marketing strategy"
                src="https://images.unsplash.com/photo-1559136555-9303baea8ebd?q=80&w=1200&auto=format&fit=crop" />
           <img alt="Analytics dashboard on screen"
                src="https://images.unsplash.com/photo-1551281044-8d8d0d8b3a6f?q=80&w=1200&auto=format&fit=crop" />
         </div>
       </div>
-      <div class="pill" style="margin-top:10px;">Powered by data • Fueled by creativity</div>
+      <div class="pill reveal" style="margin-top:10px;">Powered by data • Fueled by creativity</div>
     </section>
 
+    <!-- SERVICES -->
     <section id="services">
       <div class="section-head">
-        <h2>Services</h2>
-        <a href="#contact" class="btn">Get pricing</a>
+        <h2 class="reveal">Services</h2>
+        <a href="#contact" class="btn reveal">Get pricing</a>
       </div>
       <div class="grid-3">
-        <div class="card">
+        <div class="card reveal">
+          <div class="card-hero">
+            <img alt="Paid ads creative overview"
+                 src="https://images.unsplash.com/photo-1554774853-b415df9eeb92?q=80&w=1400&auto=format&fit=crop" />
+          </div>
           <div class="service-icon">📈</div>
           <h3>Performance Ads</h3>
           <p>Full-funnel campaigns on Meta, Google, YouTube, and LinkedIn with creative iteration loops.</p>
@@ -161,7 +216,11 @@
             <li>ROAS-positive scaling</li>
           </ul>
         </div>
-        <div class="card">
+        <div class="card reveal">
+          <div class="card-hero">
+            <img alt="SEO and content planning"
+                 src="https://images.unsplash.com/photo-1511467687858-23d96c32e4ae?q=80&w=1400&auto=format&fit=crop" />
+          </div>
           <div class="service-icon">🧭</div>
           <h3>SEO & Content</h3>
           <p>Technical foundations, topical authority, and content ops to grow durable organic traffic.</p>
@@ -171,7 +230,11 @@
             <li>Editorial calendar & briefs</li>
           </ul>
         </div>
-        <div class="card">
+        <div class="card reveal">
+          <div class="card-hero">
+            <img alt="Social media content creation"
+                 src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?q=80&w=1400&auto=format&fit=crop" />
+          </div>
           <div class="service-icon">🎥</div>
           <h3>Social & Creators</h3>
           <p>Platform-native storytelling with influencer collabs that convert, not just trend.</p>
@@ -184,11 +247,12 @@
       </div>
     </section>
 
+    <!-- IMPACT -->
     <section>
       <div class="section-head">
-        <h2>Impact at a glance</h2>
+        <h2 class="reveal">Impact at a glance</h2>
       </div>
-      <div class="metrics">
+      <div class="metrics reveal reveal-stagger">
         <div class="metric"><b>4.2x</b><div class="muted">Avg. MER in 90 days</div></div>
         <div class="metric"><b>72%</b><div class="muted">CPL reduction</div></div>
         <div class="metric"><b>+310%</b><div class="muted">Organic sessions YoY</div></div>
@@ -196,23 +260,24 @@
       </div>
     </section>
 
+    <!-- WORK -->
     <section id="work">
       <div class="section-head">
-        <h2>Selected Work</h2>
-        <a href="#contact" class="btn">Request full deck</a>
+        <h2 class="reveal">Selected Work</h2>
+        <a href="#contact" class="btn reveal">Request full deck</a>
       </div>
       <div class="showcase">
-        <figure class="shot">
+        <figure class="shot reveal">
           <img alt="Modern ecommerce brand showcase"
                src="https://images.unsplash.com/photo-1556761175-b413da4baf72?q=80&w=1400&auto=format&fit=crop" />
           <figcaption class="label">D2C • +3.8x ROAS</figcaption>
         </figure>
-        <figure class="shot">
+        <figure class="shot reveal">
           <img alt="Creative social content production"
                src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=1400&auto=format&fit=crop" />
           <figcaption class="label">UGC Engine • 120+ assets/mo</figcaption>
         </figure>
-        <figure class="shot">
+        <figure class="shot reveal">
           <img alt="SEO content operations and planning"
                src="https://images.unsplash.com/photo-1531497865146-7c67cf02f5d1?q=80&w=1400&auto=format&fit=crop" />
           <figcaption class="label">SEO • +290% organic</figcaption>
@@ -220,8 +285,43 @@
       </div>
     </section>
 
+    <!-- ABOUT -->
+    <section id="about">
+      <div class="section-head">
+        <h2 class="reveal">About Viralbiryani</h2>
+        <a href="#contact" class="btn reveal">Work with us</a>
+      </div>
+      <div class="about reveal">
+        <div class="about-media">
+          <img alt="Founder portrait"
+               src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=1200&auto=format&fit=crop" />
+        </div>
+        <div>
+          <div class="kicker">Founder</div>
+          <h3 style="margin:8px 0 6px;">Anuj Soni</h3>
+          <p class="sub">I help small & medium businesses grow through smart, practical, and budget-friendly digital marketing—both online and offline.</p>
+          <h4 style="margin:14px 0 6px;">What I Do</h4>
+          <ul class="list">
+            <li>SEO & Website Optimization</li>
+            <li>Marketing Strategy for cafes, service providers, local shops & e‑commerce</li>
+            <li>Local Marketing & Social Media Growth</li>
+            <li>Content Planning & Consultation</li>
+          </ul>
+          <h4 style="margin:16px 0 6px;">My Approach</h4>
+          <ul class="list">
+            <li>Simple & effective solutions</li>
+            <li>Easy to understand</li>
+            <li>Affordable & result‑oriented</li>
+          </ul>
+          <p class="sub" style="margin-top:10px;">If you want your business to rank higher, get more customers, and grow locally, I’d love to work with you.</p>
+          <a href="mailto:sonianuj616@gmail.com" class="btn primary" style="margin-top:10px;">Contact: sonianuj616@gmail.com</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA -->
     <section>
-      <div class="cta">
+      <div class="cta reveal">
         <div>
           <div class="kicker">Let’s plan your next 90 days</div>
           <h2 style="margin:8px 0 6px">Get a free growth roadmap</h2>
@@ -233,7 +333,27 @@
           </ul>
           <div class="pill" style="margin-top:10px;">Avg. turnaround: 3 business days</div>
         </div>
-        <form id="contact" action="#" method="post">
+        <div class="cta-visual">
+          <img alt="Marketing planning session"
+               src="https://images.unsplash.com/photo-1553877522-43269d4ea984?q=80&w=1400&auto=format&fit=crop" />
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact">
+      <div class="section-head">
+        <h2 class="reveal">Contact</h2>
+        <a href="mailto:sonianuj616@gmail.com" class="btn reveal">Email: sonianuj616@gmail.com</a>
+      </div>
+      <div class="cta reveal">
+        <div>
+          <div class="kicker">Quick brief</div>
+          <h3 style="margin:8px 0 6px;">Tell us about your goals</h3>
+          <p class="sub">We’ll reply within 1–2 business days with next steps.</p>
+          <div class="pill" style="margin-top:10px;">Prefer email? sonianuj616@gmail.com</div>
+        </div>
+        <form action="#" method="post">
           <input name="name" placeholder="Full name" required />
           <input name="email" type="email" placeholder="Work email" required />
           <input name="company" placeholder="Company" />
@@ -244,7 +364,7 @@
             <option>$15,000–$50,000/mo</option>
             <option>$50,000+/mo</option>
           </select>
-          <textarea name="message" placeholder="Tell us about your goals, timelines, and channels."></textarea>
+          <textarea name="message" placeholder="Your goals, timelines, and channels."></textarea>
           <button class="btn primary" type="submit">Request roadmap</button>
         </form>
       </div>
@@ -258,20 +378,35 @@
         <div>© <span id="y"></span> Viralbiryani. All rights reserved.</div>
       </div>
       <div style="display:flex; gap:12px;">
+        <a class="pill" href="#about">About</a>
+        <a class="pill" href="mailto:sonianuj616@gmail.com">Email</a>
         <a class="pill" href="#">Privacy</a>
-        <a class="pill" href="#">Terms</a>
-        <a class="pill" href="#">Careers</a>
       </div>
     </div>
   </footer>
 
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
-    // Demo form handler
-    document.querySelector('form').addEventListener('submit', (e) => {
-      e.preventDefault();
-      alert('Thanks! We will reach out within 1–2 business days.');
+
+    // Demo form handler (replace with Formspree/Netlify later)
+    document.querySelectorAll('form').forEach(f => {
+      f.addEventListener('submit', (e) => {
+        e.preventDefault();
+        alert('Thanks! We will reach out within 1–2 business days.');
+      });
     });
+
+    // Reveal on scroll using IntersectionObserver
+    const revealEls = document.querySelectorAll('.reveal, .reveal-stagger');
+    const obs = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('in');
+          obs.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.12 });
+    revealEls.forEach(el => obs.observe(el));
   </script>
 </body>
 </html>
